[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/evil_ball.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/DebugCircle.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Rapier.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=17]
height = 2.0

[sub_resource type="CircleShape2D" id=18]
radius = 20.025

[sub_resource type="CircleShape2D" id=19]
radius = 61.0

[node name="Enemy" type="KinematicBody2D"]
z_index = 1
collision_layer = 3
script = ExtResource( 2 )

[node name="Rapier" parent="." instance=ExtResource( 4 )]
position = Vector2( 9, 13 )
rotation = -0.211306
scale = Vector2( 0.195889, 0.195889 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 17 )

[node name="DebugCircle" type="Node2D" parent="."]
z_index = 2
script = ExtResource( 3 )

[node name="PlayerRaycast" type="RayCast2D" parent="."]
exclude_parent = false
collision_mask = 2

[node name="NavigationModeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="NavigationModeArea"]
shape = SubResource( 18 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.201163, 0.201163 )
texture = ExtResource( 1 )

[node name="AttackRangeArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRangeArea2D"]
shape = SubResource( 19 )
